--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "Debug C++",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/howard/Documents/CP/Codeforces/1019/A.exe",
+            "program": "/home/howard/Documents/CP/DMOJ/FHC/Fighting the Zombie.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "/home/howard/Documents/CP/Codeforces/1019/",
+            "cwd": "/home/howard/Documents/CP/DMOJ/FHC",
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
