--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,5 +64,8 @@
         "typeinfo": "cpp",
         "string": "cpp"
     },
+    "editor.fontFamily": "Fira Code",
+    "editor.fontSize": 14,
+    "editor.fontLigatures": true,
     "python.pythonPath": "/usr/bin/python3"
 }
